kubernetes/manifests/nginx/nginx.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: nginx
  labels:
    app: nginx

spec:
  replicas: 3
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
        - name: nginx-container
          image: nginx:latest
          volumeMounts:
            - name: src
              mountPath: /usr/share/nginx/html
      volumes:
        - name: src
          nfs:
            path: /mnt/main/kubernetes/nginx
            server: 10.0.10.10
---
apiVersion: v1
kind: Service
metadata:
  name: nginx

spec:
  selector:
    app: nginx
  clusterIP: None
  ports:
    - name: web
      protocol: TCP
      port: 80
      targetPort: 80
